# mmolch_qtutil_translation_loader

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md
example/: CMakeLists.txt  main.cpp
include/mmolch/: qtutil_translation_loader.h
src/: qtutil_translation_loader.cpp
